--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="styles.css" rel="stylesheet">
     <title>Projects</title>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+            if (isMobile) {
+                document.getElementById('mobile-sections').style.display = 'block';
+            }
+        });
+    </script>
 </head>
 <body>
     <!-- Navbar -->
