--- a/index.html
+++ b/index.html
@@ -100,9 +100,66 @@
 
         <!-- Skills Section -->
         <section class="container my-5">
-            <h2>Skills</h2>
-            <p>Programming Languages: JavaScript, Python, SQL, C, HTML, CSS</p>
-            <p>Soft Skills: Problem-solving, Communication, Teamwork, Adaptability</p>
+        <h1 class="text-center mb-4">My Skills</h1>
+        <p class="text-center">A showcase of my hard and soft skills.</p>
+
+        <!-- Hard Skills -->
+        <h2 class="mt-4">Hard Skills</h2>
+        <div class="row">
+            <!-- Skill: JavaScript -->
+            <div class="col-md-6 mb-3">
+                <h5>JavaScript</h5>
+                <div class="progress">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                </div>
+            </div>
+            <!-- Skill: Python -->
+            <div class="col-md-6 mb-3">
+                <h5>Python</h5>
+                <div class="progress">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 70%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">70%</div>
+                </div>
+            </div>
+            <!-- Skill: SQL -->
+            <div class="col-md-6 mb-3">
+                <h5>SQL</h5>
+                <div class="progress">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 75%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">75%</div>
+                </div>
+            </div>
+            <!-- Skill: C -->
+            <div class="col-md-6 mb-3">
+                <h5>C</h5>
+                <div class="progress">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
+                </div>
+            </div>
+            <!-- Skill: Web Development -->
+            <div class="col-md-6 mb-3">
+                <h5>Traditional Web Development (HTML, CSS, and REACT.js)</h5>
+                <div class="progress">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 60%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">60%</div>
+                </div>
+            </div>
+            <!-- Skill: BackEnd Web Development -->
+            <div class="col-md-6 mb-3">
+                <h5>Flask</h5>
+                <div class="progress">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">70%</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Soft Skills -->
+        <h2 class="mt-4">Soft Skills</h2>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">Teamwork and Collaboration</li>
+            <li class="list-group-item">Problem Solving</li>
+            <li class="list-group-item">Adaptability</li>
+            <li class="list-group-item">Time Management</li>
+            <li class="list-group-item">Effective Communication</li>
+            <li class="list-group-item">Leadership</li>
+        </ul>
         </section>
 
         <!-- Projects Section -->
