--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
 
-    <!-- Mobile Sections (Hidden by Default) -->
+<!--     <!-- Mobile Sections (Hidden by Default) -->
     <div id="mobile-sections" style="display: none;">
         <!-- Certifications Section -->
         <section class="container my-5">
@@ -167,6 +167,6 @@
             <h2>Projects</h2>
             <p>Coming soon! A showcase of my projects.</p>
         </section>
-    </div>
+    </div> -->
 </body>
 </html>
