--- a/certificates.html
+++ b/certificates.html
@@ -54,11 +54,11 @@
             <!-- Certificate 2 -->
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <!-- <img src="path/to/certificate-image2.png" class="card-img-top" alt="Certificate 2"> -->
+                    <img src="AWS Certification.png" class="card-img-top" alt="Certificate 2">
                     <div class="card-body">
                         <h5 class="card-title">AWS Cloud Practitioner Essentials</h5>
                         <p class="card-text">An introduction to undestanding the essentials of being a cloud pract.</p>
-                        <a href="Webpage/AWS Certification.pdf" class="btn btn-primary" target="_blank">View Certificate</a>
+                        <a href="AWS Certification.pdf" class="btn btn-primary" target="_blank">View Certificate</a>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
             <!-- Certificate 3 -->
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <!-- <img src="path/to/certificate-image3.png" class="card-img-top" alt="Certificate 3"> -->
+                    <img src="cs50 certificates.png class="card-img-top" alt="Certificate 3">
                     <div class="card-body">
                         <h5 class="card-title">Harvard CS50's Introduction to Computer Science</h5>
                         <p class="card-text">An introduction to Computer Science that went over web building, databases, and languages like python and JavaScript.</p>
