--- a/projects.html
+++ b/projects.html
@@ -43,11 +43,11 @@
                 <div class="card h-100">
                     <img src="placeholder.png" class="card-img-top" alt="Project Image Placeholder">
                     <div class="card-body">
-                        <h5 class="card-title">Project Title 1</h5>
-                        <p class="card-text">Description.</p>
+                        <h5 class="card-title">Recipe Finder</h5>
+                        <p class="card-text">a website for looking up recipes and it's respective nutritional values, written with utilizing Spoonacular API and flask backend.</p>
                     </div>
                     <div class="card-footer text-center">
-                        <a href="#" class="btn btn-primary disabled" aria-disabled="true">View Project</a>
+                        <a href="monv353.github.io/recipe-finder" class="btn btn-primary disabled" aria-disabled="true">View Project</a>
                     </div>
                 </div>
             </div>
