--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
             <!-- Project Card 1 - Placeholder -->
             <div class="col">
                 <div class="card h-100">
-                    <img src="placeholder.png" class="card-img-top" alt="Project Image Placeholder">
+                    <img src="Thumbnail 1.png" class="card-img-top" alt="Project Image Placeholder">
                     <div class="card-body">
                         <h5 class="card-title">Recipe Finder</h5>
                         <p class="card-text">a website for looking up recipes and it's respective nutritional values, written with utilizing Spoonacular API and flask backend.</p>
