--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                     <img src="Thumbnail 1.png" class="card-img-top" alt="Project Image Placeholder">
                     <div class="card-body">
                         <h5 class="card-title">Recipe Finder</h5>
-                        <p class="card-text">a website for looking up recipes and it's respective nutritional values, written with utilizing Spoonacular API and flask backend.</p>
+                        <p class="card-text">a website for looking up recipes and it's respective nutritional values, written with Spoonacular API and flask backend.</p>
                     </div>
                     <div class="card-footer text-center">
                         <a href="monv353.github.io/recipe-finder" class="btn btn-primary">View Project</a>
