--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
                         <p class="card-text">a website for looking up recipes and it's respective nutritional values, written with Spoonacular API and flask backend.</p>
                     </div>
                     <div class="card-footer text-center">
-                        <a href="monv353.github.io/recipe-finder" class="btn btn-primary">View Project</a>
+                        <a href="monv353.github.io/recipe-finder" class="btn btn-primary" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
