--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
             <!-- Project Card 2 - Placeholder -->
             <div class="col">
                 <div class="card h-100">
-                    <img src="placeholder.png" class="card-img-top" alt="Project Image Placeholder">
+<!--                     <img src="placeholder.png" class="card-img-top" alt="Project Image Placeholder"> -->
                     <div class="card-body">
                         <h5 class="card-title">Project Title 2</h5>
                         <p class="card-text">Description.</p>
