--- a/certificates.html
+++ b/certificates.html
@@ -42,7 +42,7 @@
             <!-- Certificate 1 -->
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <!-- <img src="path/to/certificate-image1.png" class="card-img-top" alt="Certificate 1"> -->
+                    <img src="freecodecamp.png" class="card-img-top" alt="Certificate 1">
                     <div class="card-body">
                         <h5 class="card-title">JavaScript and Data Structures</h5>
                         <p class="card-text">Achieved from freeCodeCamp, covering JavaScript concepts and data structures.</p>
@@ -66,7 +66,7 @@
             <!-- Certificate 3 -->
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="cs50 certificates.png class="card-img-top" alt="Certificate 3">
+                    <img src="cs50.png class="card-img-top" alt="Certificate 3">
                     <div class="card-body">
                         <h5 class="card-title">Harvard CS50's Introduction to Computer Science</h5>
                         <p class="card-text">An introduction to Computer Science that went over web building, databases, and languages like python and JavaScript.</p>
