--- a/skills.html
+++ b/skills.html
@@ -70,7 +70,7 @@
             </div>
             <!-- Skill: Web Development -->
             <div class="col-md-6 mb-3">
-                <h5>Traditional Web Development (HTML, CSS, and REACT.js)</h5>
+                <h5>Web Development (HTML, CSS, and REACT.js)</h5>
                 <div class="progress">
                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 60%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">60%</div>
                 </div>
