--- a/certificates.html
+++ b/certificates.html
@@ -74,6 +74,18 @@
                     </div>
                 </div>
             </div>
+
+                        <!-- Certificate 4 -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="HWDCTEDA890009.png" class="card-img-top" alt="Certificate 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Huawei Cloud Developer Certificate</h5>
+                        <p class="card-text">This certification validates proficiency in Huawei Cloud services, including expertise in cloud computing, networking, storage, security, and related technologies. It demonstrates the ability to design, deploy, and manage solutions on Huawei Cloud, ensuring efficient and secure cloud environments.</p>
+                        <a href="https://certificates.cs50.io/59ad53b2-3f44-419e-8b0b-8f31756dc29e.png?size=letter" class="btn btn-primary" target="_blank">View Certificate</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
